# musicgen.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
docs/: compression_model.txt  lm_structure.txt
include/: CMakeLists.txt  conv.h  decoder.h  encodec.h  encoder.h  lstm.h  quantizer.h  rvq.h  seanet.h  utils.h
scripts/: convert_state_dict_to_gguf.py  read_state_dict.py
tests/: test_conv.cpp  test_encoder.cpp  test_gguf.cpp  test_lstm.cpp  test_mul_mat.cpp  test_quantizer.cpp  test_read_gguf.cpp  test_seanet.cpp  tet_gguf.cpp
